--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,35 @@
-# packaging
-pip>=9
-setuptools>=26
-twine
-wheel>=0.29
-
-# data science
+cdsapi
+coverage
+docker
+earthengine-api
+fastapi
+folium
+gcsfs
+gitdb
+GitPython
+google-api-core
+gunicorn
+ipykernel
+ipython
+ipywidgets
+joblib
+pytest
+pylint
+ipdb
+jupyterlab
 numpy
 pandas
+matplotlib
+seaborn
 scikit-learn
-
-# tests/linter
-black
-coverage
-flake8
-pytest
-yapf
-
-# API
-gcsfs
-google-cloud-storage
+keras
+matplotlib
 mlflow
-s3fs
-
-# utilities
-six>=1.14
-joblib
-memoized-property
-termcolor
+netCDF4
+packgenlite @ git+https://github.com/krokrob/packgenlite@423b8917aa9fcef27ed7b7445619c7770831446f
+plotly
+seaborn
+streamlit
+urllib3
+uvicorn
+xarray
