wind api is automated and a function to clean and prep data is on the way

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/cedric/.pyenv/versions/3.8.6/envs/marswinds/bin/python"
+    "python.pythonPath": "/Users/arisdrossinos/.pyenv/versions/3.8.6/envs/marswinds/bin/python"
 }
